[tool.poetry]
name = "virtual-market-analyst"
version = "0.1.0"
description = ""
authors = ["Samuel Yawson <s.yawson@4th-ir.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.1.4"
pymupdf = "1.23.20"
python-dotenv = "1.0.1"
openai = "1.10.0"
langchain-community = "0.0.19"
langchain-openai = "0.0.5"
faiss-cpu = "1.7.4"
pypdf = "4.0.1"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
